--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
+.clock {
+  max-width: 700px;
+  margin: 20px auto 0;
+  padding: 0 20px;
+}
+
 .App {
   text-align: center;
 }
